fix: auth bugs  (#28)
* v2.0.0 initial commit

* feat: delete nodes

* feat: implement AI flow component and modal for feedback display

* feat: add FeedbackNode component and integrate qnect-types

* enh: node position in AIFeedback

* enh: ai feedback ui

* fix: partial localStorage persistence

* enh: custom scrollbar style

* fix: auth bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
 @import "tailwindcss";
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #5a5ad8 #0f1726;
-}
-
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
+  height: 5px;
+  width: 5px;
 }
 *::-webkit-scrollbar-track {
   border-radius: 0px;
@@ -25,13 +20,13 @@
 
 *::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background-color: #5c4eff;
+  background-color: var(--color-blue-500);
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #6a6afe;
+  background-color: var(--color-blue-600);
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #6a6afe;
+  background-color: var(--color-blue-600);
 }
